# interpretable-ml-book

./: .Rbuildignore  .Rprofile  .gitignore  .nojekyll  .travis.yml  01-introduction.Rmd  02-explainability.Rmd  02-interpretability.Rmd  02-keep-it-simple.Rmd  03-datasets.Rmd  03-explain-data.Rmd  03-simple-models.Rmd  04-interpretable-models.Rmd  04-model-agnostic.Rmd  05-model-agnostic.Rmd  05-model-specific.Rmd  05.1-agnostic.Rmd  05.2-agnostic-pdp.Rmd  05.3-agnostic-ice.Rmd  05.4-agnostic-permfeatimp.Rmd  05.5-agnostic-lime.Rmd  06-contribute.Rmd  06-references.Rmd  404.html  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION  LICENSE.txt  MIT-License.txt  Makefile  README.md  TubeSpam.html  _bookdown.yml  _build.sh  _build_and_deploy.sh  _build_html.sh  _deploy.sh  _output.yml  _update-gh-pages.sh  a-aligncoefficients-w-intercept-b-tells-actionset-which-directions-each-feature-should-move-in-to-produce-positive-change-.html  (+151 more)
Python/: bike-sharing-dataset.ipynb
R/: coef-plot.R  counterfactual.R  create_text_classifier.R  effect-plot.R  get-SpamTube-dataset.R  get-bike-sharing-dataset.R  get-bike-sharingdataset.R  get-cervical-cancer-dataset.R  get-text-classifier.R  get_SpamTube_dataset.R  ggplot-theme.R  knitr_options.R  lime.R  render_leanpub.R  utils.R
chapters/: .05.6-agnostic-shapley.Rmd.swo  .05.6-agnostic-shapley.Rmd.swp  01-introduction.Rmd  01.2-short-stories.Rmd  02-interpretability.Rmd  03-datasets.Rmd  04-interpretable-models.Rmd  04.1-interpretable-models.Rmd  04.2-interpretable-linear.Rmd  04.3-interpretable-logistic.Rmd  04.4-interpretable-rulefit.Rmd  (+12 more)
(+374 files in other folders)
