[project]
name = "Interpretable_machine_learning_by_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.1",
    "jinja2>=3.1.5",
    "lime>=0.2.0.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
]
