[project]
name = "Interpretable_machine_learning_by_python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "jupyter>=1.1.1",
   "lime>=0.2.0.1",
   "matplotlib>=3.10.0",
   "numba>=0.61.0",
   "numpy>=2.1.3",
   "openpyxl>=3.1.5",
   "pandas>=2.2.3",
   "patsy>=1.0.1",
   "scikit-learn>=1.6.1",
   "scipy>=1.15.2",
   "seaborn>=0.13.2",
   "shap>=0.46.0",
   "statsmodels>=0.14.4",
   "tqdm>=4.67.1",
]